[gd_scene load_steps=8 format=2]

[ext_resource path="res://examples/informator/ui/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Rena/RVM.gd" type="Script" id=2]
[ext_resource path="res://examples/informator/Main.gd" type="Script" id=3]
[ext_resource path="res://examples/informator/ui/FlatButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://examples/informator/ui/FlatButtonHover.tres" type="StyleBox" id=5]
[ext_resource path="res://examples/informator/resources/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 6 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 128, 128 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenaVM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Dialog" parent="." instance=ExtResource( 1 )]
visible = false
VirtualMachine = NodePath("../../Main/RenaVM")

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -291.728
margin_top = 13.435
margin_right = -12.728
margin_bottom = 64.435
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="HBox"]
margin_right = 137.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Quick save"

[node name="LoadButton" type="Button" parent="HBox"]
margin_left = 141.0
margin_right = 279.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Quick load"

[node name="BacklogButton" type="Button" parent="."]
margin_left = 18.0
margin_top = 16.0
margin_right = 125.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "Backlog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BacklogLabel" type="RichTextLabel" parent="."]
visible = false
anchor_right = 0.773
anchor_bottom = 0.678
margin_left = 21.0
margin_top = 85.0
margin_right = 0.447937
margin_bottom = 0.199982
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBox/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="HBox/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="toggled" from="BacklogButton" to="." method="_on_BacklogButton_toggled"]
